--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -476,12 +476,12 @@ font_size 12.0
 #: specified using backslash escapes, to specify a backslash use a
 #: double backslash.
 
-# show_hyperlink_targets no
+show_hyperlink_targets yes
 
 #: When the mouse hovers over a terminal hyperlink, show the actual
 #: URL that will be activated when the hyperlink is clicked.
 
-# underline_hyperlinks hover
+underline_hyperlinks hover
 
 #: Control how hyperlinks are underlined. They can either be
 #: underlined on mouse hover, always (i.e. permanently underlined) or
@@ -957,6 +957,9 @@ inactive_text_alpha 0.8
 #: between zero and one, with zero being fully faded).
 
 hide_window_decorations titlebar-only
+
+# in case we wanted to show title, set this
+# macos_titlebar_color background
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -1641,7 +1644,7 @@ hide_window_decorations titlebar-only
 #: remote machine to read/write to the local filesystem, without
 #: permission.
 
-# allow_hyperlinks yes
+allow_hyperlinks yes
 
 #: Process hyperlink escape sequences (OSC 8). If disabled OSC 8
 #: escape sequences are ignored. Otherwise they become clickable
