--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,2 +1,3 @@
-theme = dark:catppuccin-frappe,light:catppuccin-latte
+theme = dark:catppuccin-mocha,light:catppuccin-latte
 font-family = JetBrains Mono
+macos-titlebar-style = tabs
