--- a/dots/.aerospace.toml
+++ b/dots/.aerospace.toml
@@ -13,13 +13,15 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  # 'exec-and-forget borders',
-  'exec-and-forget sketchybar'
+    # 'exec-and-forget borders',
+    'exec-and-forget sketchybar',
 ]
 
 # Notify Sketchybar about workspace change
-exec-on-workspace-change = ['/bin/bash', '-c',
-    'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
+exec-on-workspace-change = [
+    '/bin/bash',
+    '-c',
+    'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',
 ]
 
 # Start AeroSpace at login
@@ -61,11 +63,14 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 #                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
 inner.horizontal = 8
-inner.vertical =   8
-outer.left =       8
-outer.bottom =     8
-outer.top =        [{ monitor.built-in = 24 }, 54] # different for mac built-in and external monitor
-outer.right =      8
+inner.vertical = 8
+outer.left = 8
+outer.bottom = 8
+outer.top = [
+    { monitor.built-in = 24 },
+    54,
+] # different for mac built-in and external monitor
+outer.right = 8
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -92,17 +97,24 @@ alt-t = 'layout tiles horizontal vertical'
 # alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-j = 'focus left'
-alt-k = 'focus down'
-# have to disable up for now because on Danish keyboard alt+i writes the pipe character and I need that :( :( :(
-# alt-i = 'focus up'
-alt-l = 'focus right'
+ctrl-cmd-h = 'focus left'
+ctrl-cmd-left = 'focus left'
+ctrl-cmd-j = 'focus down'
+ctrl-cmd-down = 'focus down'
+ctrl-cmd-k = 'focus up'
+ctrl-cmd-up = 'focus up'
+ctrl-cmd-l = 'focus right'
+ctrl-cmd-right = 'focus right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-j = 'move left'
-alt-shift-k = 'move down'
-alt-shift-i = 'move up'
-alt-shift-l = 'move right'
+ctrl-shift-h = 'move left'
+ctrl-shift-left = 'move left'
+ctrl-shift-j = 'move down'
+ctrl-shift-down = 'move down'
+ctrl-shift-k = 'move up'
+ctrl-shift-up = 'move up'
+ctrl-shift-l = 'move right'
+ctrl-shift-right = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 # slash = minus on danish keyboard
@@ -132,14 +144,8 @@ alt-tab = 'workspace-back-and-forth'
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 # Disable annoying and useless hide command
-cmd-h = [] # Disable "hide application"
+cmd-h = []     # Disable "hide application"
 cmd-alt-h = [] # Disable "hide others"
-
-# join/split
-ctrl-shift-j = 'join-with left'
-ctrl-shift-k = 'join-with down'
-ctrl-shift-i = 'join-with up'
-ctrl-shift-l = 'join-with right'
 
 # toggle fullscreen
 alt-f = 'fullscreen'
@@ -203,4 +209,3 @@ run = 'layout floating'
 if.app-id = 'com.apple.FaceTime'
 check-further-callbacks = true
 run = 'layout floating'
-
