--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,3 +1,6 @@
 theme = dark:catppuccin-mocha,light:catppuccin-latte
 font-family = JetBrains Mono
 macos-titlebar-style = tabs
+macos-titlebar-proxy-icon = hidden
+cursor-style = block
+cursor-style-blink = false
