--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -1,25 +1,50 @@
 # macchiato green accent
 gui:
+  # theme:
+  #   activeBorderColor:
+  #     - "#a6da95"
+  #     - bold
+  #   inactiveBorderColor:
+  #     - "#a5adcb"
+  #   optionsTextColor:
+  #     - "#8aadf4"
+  #   selectedLineBgColor:
+  #     - "#363a4f"
+  #   cherryPickedCommitBgColor:
+  #     - "#494d64"
+  #   cherryPickedCommitFgColor:
+  #     - "#a6da95"
+  #   unstagedChangesColor:
+  #     - "#ed8796"
+  #   defaultFgColor:
+  #     - "#cad3f5"
+  #   searchingActiveBorderColor:
+  #     - "#eed49f"
+  #
+  # authorColors:
+  #   "*": "#b7bdf8"
+
+  # catpuccin latte
   theme:
     activeBorderColor:
-      - "#a6da95"
+      - '#40a02b'
       - bold
     inactiveBorderColor:
-      - "#a5adcb"
+      - '#6c6f85'
     optionsTextColor:
-      - "#8aadf4"
+      - '#1e66f5'
     selectedLineBgColor:
-      - "#363a4f"
+      - '#ccd0da'
     cherryPickedCommitBgColor:
-      - "#494d64"
+      - '#bcc0cc'
     cherryPickedCommitFgColor:
-      - "#a6da95"
+      - '#40a02b'
     unstagedChangesColor:
-      - "#ed8796"
+      - '#d20f39'
     defaultFgColor:
-      - "#cad3f5"
+      - '#4c4f69'
     searchingActiveBorderColor:
-      - "#eed49f"
+      - '#df8e1d'
 
   authorColors:
-    "*": "#b7bdf8"
+    '*': '#7287fd'
