--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -1,12 +1,25 @@
 {
+  "agent": {
+    "default_model": {
+      "provider": "anthropic",
+      "model": "claude-3-7-sonnet-latest"
+    },
+    "version": "2"
+  },
   "vim_mode": true,
   "base_keymap": "VSCode",
   "ui_font_size": 14,
-  "buffer_font_size": 14,
+  "buffer_font_size": 12.0,
   "theme": {
     "mode": "system",
     "light": "Catppuccin Latte",
     "dark": "Catppuccin Mocha"
   },
-  "terminal": { "font_family": "MesloLGS NF" }
+  "terminal": {
+    "font_family": "MesloLGS NF"
+  },
+  "show_edit_predictions": true,
+  "features": {
+    "edit_prediction_provider": "zed"
+  }
 }
