--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -4,3 +4,5 @@ macos-titlebar-style = tabs
 macos-titlebar-proxy-icon = hidden
 cursor-style = block
 cursor-style-blink = false
+background-opacity = 0.9
+background-blur = 10
