--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,4 +1,4 @@
-theme = dark:catppuccin-mocha,light:catppuccin-latte
+theme = dark:Catppuccin Frappe,light:Catppuccin Latte
 font-family = JetBrains Mono
 macos-titlebar-style = tabs
 macos-titlebar-proxy-icon = hidden
